fixed overflow

--- a/src/pages/home.sass
+++ b/src/pages/home.sass
@@ -81,6 +81,7 @@
 
   .featured-container
     padding: rscale(80, 160) 0
+    overflow: hidden
 
     h3
       text-transform: uppercase
